--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -6,4 +6,6 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="ObjectApproval" version="1.2.0" targetFramework="net45" />
+  <package id="System.IO.Abstractions" version="2.0.0.124" targetFramework="net45" />
+  <package id="System.IO.Abstractions.TestingHelpers" version="2.0.0.124" targetFramework="net45" />
 </packages>
