--- a/Integration/WithNugetAndInSolutionWeavers/packages.config
+++ b/Integration/WithNugetAndInSolutionWeavers/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Virtuosity.Fody" version="1.19.8" targetFramework="net40" />
+  <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Virtuosity.Fody" version="1.19.11.0" targetFramework="net452" developmentDependency="true" />
 </packages>
