--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="ApprovalTests" version="3.0.11" targetFramework="net452" />
   <package id="ApprovalUtilities" version="3.0.11" targetFramework="net452" />
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Moq" version="4.5.13" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net45" />
   <package id="ObjectApproval" version="1.4.0" targetFramework="net452" />
