--- a/FodyIsolated.Tests/packages.config
+++ b/FodyIsolated.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net40" />
-  <package id="NUnit" version="3.4.1" targetFramework="net45"/>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Moq" version="4.5.13" targetFramework="net452" />
+  <package id="NUnit" version="3.4.1" targetFramework="net45" />
 </packages>
