#232 - Added Fody vversion to the attribute, loading weaver's version

--- a/FodyIsolated/FodyIsolated.csproj
+++ b/FodyIsolated/FodyIsolated.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DelegateBuilders\DelegateBuilder.cs" />
     <Compile Include="DelegateBuilders\ExecuteDelegateBuilder.cs" />
     <Compile Include="DelegateBuilders\PropertyDelegateBuilder.cs" />
+    <Compile Include="FodyGeneratedCodeAttribute.cs" />
     <Compile Include="SymbolsFinder.cs" />
     <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="InnerWeaver.cs" />
