Used shared Assembly attributes

--- a/dotnet-fody.Tests/dotnet-fody.Tests.csproj
+++ b/dotnet-fody.Tests/dotnet-fody.Tests.csproj
@@ -46,7 +46,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ResponseFileParserTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -56,6 +55,9 @@
       <Project>{2DD93D98-DEC1-44EB-9F9D-C871E90FCFCB}</Project>
       <Name>dotnet-fody</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
