--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -45,7 +45,7 @@
       AssemblyFile="$(FodyPath)\Fody.dll" />
   <Target
       AfterTargets="AfterCompile"
-      Condition="Exists(@(IntermediateAssembly))"
+      Condition="Exists(@(IntermediateAssembly)) And '$(BuildingInsideVisualStudio)' != 'true'"
       Name="FodyTarget"
       DependsOnTargets="$(FodyDependsOnTargets)"
       Inputs="@(IntermediateAssembly->'%(FullPath)');$(FodyKeyFilePath);$(ProjectWeaverXml)"
