fix net standard support

--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -61,6 +61,7 @@
           SignAssembly="$(FodySignAssembly)"
           ReferenceCopyLocalPaths="@(ReferenceCopyLocalPaths)"
           DefineConstants="$(DefineConstants)"
+          PackageDefinitions="@(PackageDefinitions->'%(ResolvedPath)')"
       >
 
       <Output 
