--- a/FodyIsolated.Tests/FodyIsolated.Tests.csproj
+++ b/FodyIsolated.Tests/FodyIsolated.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="FakeModuleWeaver.cs" />
     <Compile Include="IsolatedContainsTypeCheckerTests.cs" />
     <Compile Include="DelegateBuilders\PropertyDelegateBuilderTests.cs" />
+    <Compile Include="MockAssemblyResolver.cs" />
     <Compile Include="TypeFinderTest.cs" />
     <Compile Include="WeaverInitialiserTests.cs" />
     <Compile Include="WeavingInfoTests.cs" />
