--- a/Integration/Tests/Tests.csproj
+++ b/Integration/Tests/Tests.csproj
@@ -42,6 +42,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj">
+      <Project>{4f286c5b-9599-4f6a-bd7f-1e7bb9ddcac6}</Project>
+      <Name>WithNoPdb</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj">
       <Project>{7DDD6A9E-7D35-4D5B-8B60-D9D32F3D521A}</Project>
       <Name>WithNugetAndInSolutionWeavers</Name>
@@ -57,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="WithNugetAndInSolutionWeaversTest.cs" />
+    <Compile Include="WithNoPdbTest.cs" />
     <Compile Include="WithNugetWeaversTest.cs" />
     <Compile Include="WithOnlyInSolutionWeaverTest.cs" />
   </ItemGroup>
