Added DebugSymbols build parameter to Fody

--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -62,6 +62,7 @@
           ReferenceCopyLocalPaths="@(ReferenceCopyLocalPaths)"
           DefineConstants="$(DefineConstants)"
           PackageDefinitions="@(PackageDefinitions->'%(ResolvedPath)')"
+          DebugSymbols="$(DebugSymbols)"
       >
 
       <Output 
