Use better property to detect symbol creation

--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -62,7 +62,7 @@
           ReferenceCopyLocalPaths="@(ReferenceCopyLocalPaths)"
           DefineConstants="$(DefineConstants)"
           PackageDefinitions="@(PackageDefinitions->'%(ResolvedPath)')"
-          DebugSymbols="$(DebugSymbols)"
+          DebugSymbols="$(_DebugSymbolsProduced)"
       >
 
       <Output
