update to new csproj

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@
 
 ##  If you have NuGet Package Restore enabled, uncomment this
 packages/
-ForSample/
+ForIntegration/
 NuGetCecilBuild/
 NugetBuild/
 ChocolateyNuGetBuild/
