--- a/Integration/Tests/Tests.csproj
+++ b/Integration/Tests/Tests.csproj
@@ -1,71 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9C8338D4-3F27-4FA5-97A0-6039FDB07724}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tests</RootNamespace>
-    <AssemblyName>Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <FodyMessageImportance>High</FodyMessageImportance>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <TargetFramework>net452</TargetFramework>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <DebugSymbols>True</DebugSymbols>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.7.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.7.0\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
+    <PackageReference Include="NUnit" Version="3.7.0" />
+    <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj"/>
+    <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj"/>
+    <ProjectReference Include="..\WithNugetWeavers\WithNugetWeavers.csproj"/>
+    <ProjectReference Include="..\WithOnlyInSolutionWeaver\WithOnlyInSolutionWeaver.csproj"/>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj">
-      <Project>{4f286c5b-9599-4f6a-bd7f-1e7bb9ddcac6}</Project>
-      <Name>WithNoPdb</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj">
-      <Project>{7DDD6A9E-7D35-4D5B-8B60-D9D32F3D521A}</Project>
-      <Name>WithNugetAndInSolutionWeavers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WithNugetWeavers\WithNugetWeavers.csproj">
-      <Project>{4744FEC7-AE13-4A20-81C6-BBB837C19B5F}</Project>
-      <Name>WithNugetWeavers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WithOnlyInSolutionWeaver\WithOnlyInSolutionWeaver.csproj">
-      <Project>{4D1BF1C8-5C19-4A95-BEFF-6F8D67FF7B87}</Project>
-      <Name>WithOnlyInSolutionWeaver</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="WithNugetAndInSolutionWeaversTest.cs" />
-    <Compile Include="WithNoPdbTest.cs" />
-    <Compile Include="WithNugetWeaversTest.cs" />
-    <Compile Include="WithOnlyInSolutionWeaverTest.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
