<Optimize>False</Optimize> tests

--- a/Fody.Tests/Fody.Tests.csproj
+++ b/Fody.Tests/Fody.Tests.csproj
@@ -5,6 +5,7 @@
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Optimize>False</Optimize>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ApprovalTests" Version="3.0.13" />
