--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -64,6 +64,7 @@
           PackageDefinitions="@(PackageDefinitions->'%(ResolvedPath)')"
           DebugSymbols="$(DebugSymbols)"
           DebugType="$(DebugType)"
+          DocumentationFilePaths="@(DocFileItem->'%(FullPath)')"
       >
 
       <Output
