Build task works with string as well, does not need a string array.

--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -64,7 +64,7 @@
           PackageDefinitions="@(PackageDefinitions->'%(ResolvedPath)')"
           DebugSymbols="$(DebugSymbols)"
           DebugType="$(DebugType)"
-          DocumentationFilePaths="@(DocFileItem->'%(FullPath)')"
+          DocumentationFilePath="@(DocFileItem->'%(FullPath)')"
       >
 
       <Output
